# bonzobuddy

./: .gitignore  BULK_INTEGRATION_TESTING.md  MONITORBASE_TESTING.md  README.md  generated_prospects.json  org_webhooks.json  pyproject.toml  pytest.ini  pytestREADME.md  readthis.md
MD Files/: BonzoBuddyNewReadme.md  BonzoBuddy_v2_PRD.md
app/: main.py
app/models/: core.py  schemas.py
app/services/: data_service.py  keyring_service.py  payload_service.py  schema_registry.py
app/state/: app_state.py
app/ui/: main_window.py  popups.py
assets/: bonzobuddy
reports/: integration_report.html
reports/integration_health_reports/: monitorbase_integration_report_20250703_141535.json
schemas/: CustomWebhook.md  proposed_data_views.md
schemas/crm/Hubspot/: Hubspot.md  hubspot_schema.json
schemas/internal_integrations/Bonzo/: Bonzo.md  bonzo_schema.json
schemas/internal_integrations/Mmi/: Mmi.md  mmi_mortgage_schema.json  mmi_real_estate_schema.json
schemas/internal_integrations/Monitorbase/: Monitorbase.md  monitorbase_schema.json
schemas/internal_integrations/Refinder/: refinder_schema.json
schemas/lead_sources/FreeRateUpdate/: FreeRateUpdate.md  freerateupdate_schema.json
schemas/lead_sources/LeadPops/: leadpops_schema.json
schemas/lead_sources/LendingTreeLTXML/: LendingTreeLTXML.md  lendingtreeltxml_schema.json
schemas/lead_sources/LoanBright/: LoanBright.md  loanbright_schema.json
schemas/lead_sources/Loansifter/: Loansifter.md  loansifter_schema.json
schemas/lead_sources/Mmi/: mmi_schema.json
schemas/lead_sources/Modex/: Modex.md  modex_schema.json
schemas/lead_sources/Mortech/: mortech_schema.json
schemas/lead_sources/Realtor/: Realtor.md  realtor_schema.json
schemas/lead_sources/RetrAgent/: retragents_schema.json
schemas/lead_sources/RetrLoanOfficer/: retrloanofficer_schema.json
schemas/lead_sources/WikiRealty/: wikirealty_schema.json
schemas/lead_sources/Zillow/: Zillow.md  zillow_longForm_schema.json  zillow_propertyPreapproval_schema.json  zillow_quote_schema.json
scripts/: bonzo_api_client.py  bulk_test_generator.py  integration_health_check.py  test_data_factory.py  webhook_validator.py
sendhook_app/: data_manager.py  gui.py  main.py  payload_generator.py
tests/: __init__.py  conftest.py
tests/configs/: monitorbase_test_config.yaml  test_config_template.yaml
tests/fixtures/: monitorbase_payload_template.json  monitorbase_superuser_payload_template.json
tests/integration_tests/: test_monitorbase_integration.py
webhook_payload_docs/loan_origination_systems/: placeholder.txt
(+30 files in other folders)
