[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonzobuddy"
version = "2.0.0"
description = "Professional webhook integration testing tool"
authors = [
    {name = "Bonzo Buddy Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "customtkinter>=5.2.0",
    "keyring>=24.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
