[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonzobuddy"
version = "2.0.0"
description = "Professional webhook integration testing tool"
authors = [
    {name = "Bonzo Buddy Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "customtkinter>=5.2.0",
    "keyring>=24.0.0",
    "requests>=2.31.0",
    "pytest>=8.4.1",
    "pytest-html>=4.1.1",
    "pytest-asyncio>=1.0.0",
    "pytest-metadata>=3.1.1",
    "aiohttp>=3.12.13",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.3.2",
    "attrs>=25.3.0",
    "frozenlist>=1.7.0",
    "multidict>=6.6.3",
    "propcache>=0.3.2",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "pygments>=2.19.2",
    "iniconfig>=2.1.0",
    "pluggy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
